Tweaks post styles.

--- a/src/components/HorizontalScroller.module.scss
+++ b/src/components/HorizontalScroller.module.scss
@@ -1,5 +1,6 @@
-.horizontalScroller {
-    overflow-x: scroll;
-    width: 100%;
-    margin-bottom: 5.5rem;
+:global {
+    .horizontalScroller {
+        overflow-x: scroll;
+        width: 100%;
+    }
 }
