--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,4 @@
-$font-ui-sans:               -apple-system, "Roboto", sans-serif;
-$font-text-sans:             -apple-system, "Roboto", sans-serif;
+$font-ui-sans:               -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+$font-text-sans:             -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
 $font-text-serif:            "Palatino", "Gentium Book Basic", serif;
 $font-text-monospaced:       "SF Mono", "Roboto Mono", monospace;
