--- a/src/components/SourceCode.module.scss
+++ b/src/components/SourceCode.module.scss
@@ -6,13 +6,14 @@
     flex-direction: row;
 
     font-family: $font-text-monospaced;
-    font-size: 0.88em;
+    font-size: 0.824em;
     font-weight: 400;
-    line-height: 1.2;
-    padding-top: 3.1rem;
-    padding-bottom: 3.3rem;
+    line-height: 2.07;
+    padding-top: 1.9rem;
+    padding-bottom: 1.8rem;
     padding-left: 2.1rem;
     padding-right: 2.1rem;
+    margin-top: 4.5rem;
     margin-bottom: 4.9rem;
 
     background-color: $color-content-code-block-background;
@@ -20,13 +21,14 @@
 
     .lineNumberList {
         display: inline-block;
+        margin: 0;
         counter-reset: codeblock;
 
         .lineNumber {
             user-select: none;
             -moz-user-select: none;
             -webkit-user-select: none;
-            margin-bottom: 0.9rem;
+            margin-bottom: 0;
 
             &:last-child {
                 margin-bottom: 0;
@@ -44,11 +46,12 @@
 
     .codeContent {
         display: inline-block;
+        margin: 0;
         padding-right: 3.4rem;
         color: $color-content-body;
 
         .line {
-            margin-bottom: 0.9rem;
+            margin-bottom: 0;
 
             &:last-child {
                 margin-bottom: 0;
