--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 
 html {
     font-family: $font-ui-sans;
-    font-size: 10px;
+    font-size: 62.5%;
     font-weight: 300;
     -webkit-font-smoothing: antialiased;
 }
