Updates node packages.

--- a/src/components/SourceCode.module.scss
+++ b/src/components/SourceCode.module.scss
@@ -15,6 +15,8 @@
     padding-right: 2.1rem;
     margin-top: 4.5rem;
     margin-bottom: 4.9rem;
+    margin-left: -2.1rem;
+    margin-right: -2.1rem;
 
     background-color: $color-content-code-block-background;
     overflow-x: scroll;
