--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,10 @@ html {
 
 span.katex-display {
     margin: 0;
-    margin-bottom: 4.2rem;
+    margin-top: 4.5rem;
+    margin-bottom: 4.9rem;
+    margin-left: -2.1rem;
+    margin-right: -2.1rem;
     padding: 2.1rem;
     color: $color-content-heading;
     background-color: $color-content-math-block-background;
