--- a/src/components/PostFullText.module.scss
+++ b/src/components/PostFullText.module.scss
@@ -73,13 +73,6 @@
             word-wrap: break-word;
         }
 
-        :global {
-            .horizontalScroller {
-                margin-top: 4.5rem;
-                margin-bottom: 4.4rem;
-            }
-        }
-
         h2 {
             margin-top: 3.8rem;
             margin-bottom: 0.3rem;
@@ -103,6 +96,12 @@
         h6 {
             margin-top: 3.3rem;
             margin-bottom: -0.2rem;
+        }
+
+        picture {
+            width: calc(100% + 2.1rem * 2);
+            margin-left: -2.1rem;
+            margin-right: -2.1rem;
         }
 
         blockquote {
