--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,40 @@ p {
     }
 }
 
+.heading {
+
+}
+
+.h1 {
+    margin-top: 3.1rem;
+    margin-bottom: 0.3rem;
+}
+
+.h2 {
+    margin-top: 3.2rem;
+    margin-bottom: 0.2rem;
+}
+
+.h3 {
+    margin-top: 3.2rem;
+    margin-bottom: 0.2rem;
+}
+
+.h4 {
+    margin-top: 3.3rem;
+    margin-bottom: 0.1rem;
+}
+
+.h5 {
+    margin-top: 3.3rem;
+    margin-bottom: 0;
+}
+
+.h6 {
+    margin-top: 3.3rem;
+    margin-bottom: 0.1rem;
+}
+
 .textParagraphTop {
     margin-top: 1.3rem;
 }
@@ -57,6 +91,38 @@ p {
 
 .geometryBlockBottom {
     margin-bottom: 4.4rem;
+}
+
+.heading + .textParagraphTop {
+    margin-top: 0;
+}
+
+.heading + .textBlockTop {
+    margin-top: 0;
+}
+
+.h1 + .geometryBlockTop {
+    margin-top: 1.1rem;
+}
+
+.h2 + .geometryBlockTop {
+    margin-top: 1.2rem;
+}
+
+.h3 + .geometryBlockTop {
+    margin-top: 1.1rem;
+}
+
+.h4 + .geometryBlockTop {
+    margin-top: 1.2rem;
+}
+
+.h5 + .geometryBlockTop {
+    margin-top: 1rem;
+}
+
+.h6 + .geometryBlockTop {
+    margin-top: 1.1rem;
 }
 
 .geometryBlockBottom + .geometryBlockTop {
