--- a/src/components/HorizontalScroller.module.scss
+++ b/src/components/HorizontalScroller.module.scss
@@ -1,4 +1,5 @@
 .horizontalScroller {
-    overflow-x: scroll;
     width: 100%;
+    overflow-x: scroll;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
