Refines post styles.

--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -39,7 +39,7 @@
     height: 100vh;
     justify-content: flex-start;
     margin-left: 30%;
-    width: 43%;
+    width: calc(70% * 0.618);
 }
 
 // Control Containers
