--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,38 +35,34 @@ p {
     }
 }
 
-.heading {
-
-}
-
 .h1 {
-    margin-top: 3.1rem;
-    margin-bottom: 0.3rem;
+    margin-top: 3.4rem;
+    margin-bottom: 1.3rem;
 }
 
 .h2 {
-    margin-top: 3.2rem;
-    margin-bottom: 0.2rem;
+    margin-top: 3.3rem;
+    margin-bottom: 1.4rem;
 }
 
 .h3 {
-    margin-top: 3.2rem;
-    margin-bottom: 0.2rem;
+    margin-top: 3.4rem;
+    margin-bottom: 1.3rem;
 }
 
 .h4 {
     margin-top: 3.3rem;
-    margin-bottom: 0.1rem;
+    margin-bottom: 1.4rem;
 }
 
 .h5 {
     margin-top: 3.3rem;
-    margin-bottom: 0;
+    margin-bottom: 1.4rem;
 }
 
 .h6 {
-    margin-top: 3.3rem;
-    margin-bottom: 0.1rem;
+    margin-top: 3.4rem;
+    margin-bottom: 1.3rem;
 }
 
 .textParagraphTop {
@@ -77,54 +73,55 @@ p {
     margin-bottom: 1.3rem;
 }
 
-.textBlockTop {
-    margin-top: 3.9rem;
-}
-
-.textBlockBottom {
-    margin-bottom: 3.4rem;
-}
-
 .geometryBlockTop {
-    margin-top: 4.5rem;
+    margin-top: 2.4rem;
 }
 
 .geometryBlockBottom {
-    margin-bottom: 4.4rem;
+    margin-bottom: 2.3rem;
 }
 
-.heading + .textParagraphTop {
-    margin-top: 0;
-}
-
-.heading + .textBlockTop {
-    margin-top: 0;
+.separator {
+    margin-top: 4.4rem;
+    margin-bottom: 4.5rem;
 }
 
 .h1 + .geometryBlockTop {
-    margin-top: 1.1rem;
+    margin-top: 2.4rem;
 }
 
 .h2 + .geometryBlockTop {
-    margin-top: 1.2rem;
+    margin-top: 2.5rem;
 }
 
 .h3 + .geometryBlockTop {
-    margin-top: 1.1rem;
+    margin-top: 2.4rem;
 }
 
 .h4 + .geometryBlockTop {
-    margin-top: 1.2rem;
+    margin-top: 2.5rem;
 }
 
 .h5 + .geometryBlockTop {
-    margin-top: 1rem;
+    margin-top: 2.5rem;
 }
 
 .h6 + .geometryBlockTop {
-    margin-top: 1.1rem;
+    margin-top: 2.4rem;
 }
 
 .geometryBlockBottom + .geometryBlockTop {
+    margin-top: 3.4rem;
+}
+
+.geometryBlockBottom + .separator {
+    margin-top: 5.5rem;
+}
+
+.separator + .geometryBlockTop {
+    margin-top: 5.5rem;
+}
+
+.separator + .separator {
     margin-top: 5.5rem;
 }
