Refines code blocks in posts.

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -40,6 +40,7 @@ $color-content-body:                    $_gray-34;
 $color-content-quote:                   $_gray-8;
 $color-content-code-block-background:   #e8f2ff;
 $color-content-code-block-indicator:    #b6d2f2;
+$color-content-code-block-language:     $_white;
 $color-content-code-block-line-number:  $_gray-55;
 $color-content-math-block-background:   #faf9f7;
 $color-content-math-block-indicator:    #e6e2da;
