--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -16,8 +16,8 @@
         color: $color-content-heading;
 
         th {
-            padding-top: 1.8rem;
-            padding-bottom: 1.7rem;
+            padding-top: calc(1.5rem - 0.8rem);
+            padding-bottom: calc(1.7rem - 0.8rem);
             padding-left: 3.4rem;
 
             &:last-child {
@@ -32,8 +32,8 @@
         color: $color-content-body;
 
         td {
-            padding-top: 1.8rem;
-            padding-bottom: 1.7rem;
+            padding-top: calc(1.5rem - 0.8rem);
+            padding-bottom: calc(1.7rem - 0.8rem);
             padding-left: 3.4rem;
 
             &:last-child {
